# meshcore-rs

./: Cargo.toml  LICENSE
.cargo/: config.toml
src/: error.rs  identity.rs  main.rs  packet.rs  platform.rs  radio.rs  sensor.rs
src/mesh/: channel.rs  contacts.rs  identity.rs  mod.rs  packet.rs  preferences.rs  queue.rs  tables.rs  telemetry.rs
src/mesh/packet/: advert.rs  encryption.rs  mod.rs  node.rs  path.rs  payload.rs  raw.rs
src/mesh/packet/payload/: mod.rs  serialize.rs
src/mesh/packet/payload/parser/: mod.rs  serialize.rs  tests.rs  util.rs
src/radio/: mod.rs  noise_floor.rs
src/utils/: buffer.rs  mod.rs  reader.rs
