[package]
name = "meshcore-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = [""]

[dependencies]
bilge = "0.3.0"
bitflags = "2.11.0"
bytemuck = "1.25.0"
ed25519-dalek = { version = "2.2.0", default-features = false, features = [
    "fast",
] }
heapless = "0.9.2"
thiserror = "2.0.18"

[dev-dependencies]
hex = "0.4.3"
