[package]
name = "meshcore-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Nareshkumar Rao"]
repository = "https://github.com/naresh97/meshcore-rs"
description = "An implementation of the MeshCore protocol in Rust"

[dependencies]
aes = "0.8.4"
bilge = "0.3.0"
bitflags = "2.11.0"
bytemuck = "1.25.0"
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
    "precomputed-tables",
] }
heapless = "0.9.2"
hmac = "0.13.0"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
hex = "0.4.3"
